--- a/themes/mamimikun_theme/layouts/_partials/resume_card_experience.html
+++ b/themes/mamimikun_theme/layouts/_partials/resume_card_experience.html
@@ -1,4 +1,4 @@
-<h3>{{ .title }} - {{ .company }} ({{ .duration }})</h3>
+<h3><b>{{ .title }} - {{ .company }} ({{ .duration }})</b></h3>
 <p>{{ .description }}</p>
 <ul>
   {{ if .highlights }}
