--- a/themes/mamimikun_theme/layouts/_partials/header.html
+++ b/themes/mamimikun_theme/layouts/_partials/header.html
@@ -5,7 +5,7 @@
       &#9608;
     </span>
   </a>
-  <a id="home-link-small" class="navbar-header" href='{{ "/" | relURL }}' id="home-link-small">~$ <span id='cursor-blinky'>&#9608;</span></a>
+  <a id="home-link-small" class="navbar-header" href='{{ "/" | relURL }}' id="home-link-small">~$ <span id='cursor-blinky-sm'>&#9608;</span></a>
   <ul class="ul-navbar" id="ul-navbar">
     <li><a href='{{ "pages/resume" | relURL }}'>[Resume]</a></li>
   </ul>
