--- a/themes/mamimikun_theme/assets/css/main.css
+++ b/themes/mamimikun_theme/assets/css/main.css
@@ -33,6 +33,8 @@ body {
   padding-right: 1ch;
   border: 1ch solid white;
   margin-bottom: 5ch;
+  text-align: justify;
+  text-justify: auto;
 }
 
 .center-card-section:focus {
@@ -124,6 +126,12 @@ a:hover {
 }
 
 @media only screen and (max-width: 768px) {
+    body {
+  font-family: 'Perfect DOS VGA 437 Win', sans-serif;
+  font-size: 1rem;
+  color: white;
+  background-color: black;
+}
   a:hover {
     cursor: pointer;
     background-color: #00cd00;
@@ -132,6 +140,7 @@ a:hover {
     display: none;
   }
   .ul-navbar.nav-expanded {
+    margin-top:1ch white solid;
     width: 100%;
     float: left;
     display: block;
@@ -178,9 +187,25 @@ a:hover {
     text-decoration: none;
     padding: 0;
   }
+  .center-card-section {
+  box-sizing: border-box;
+  width: 100%;
+  padding-left: 1ch;
+  padding-right: 1ch;
+  border: .5ch solid white;
+  margin-bottom: 5ch;
+  text-align: justify;
+  text-justify: auto;
+}
 }
 
 @media only screen and (min-width: 768px) {
+    body {
+  font-family: 'Perfect DOS VGA 437 Win', sans-serif;
+  font-size: 1.5rem;
+  color: white;
+  background-color: black;
+}
   a:hover {
     cursor: pointer;
     background-color: #00cd00;
