--- a/themes/mamimikun_theme/assets/css/main.css
+++ b/themes/mamimikun_theme/assets/css/main.css
@@ -128,7 +128,7 @@ a:hover {
 @media only screen and (max-width: 768px) {
     body {
   font-family: 'Perfect DOS VGA 437 Win', sans-serif;
-  font-size: 1rem;
+  font-size: 20px;
   color: white;
   background-color: black;
 }
