mod theme a bigt

--- a/themes/mamimikun_theme/layouts/_partials/header.html
+++ b/themes/mamimikun_theme/layouts/_partials/header.html
@@ -8,6 +8,7 @@
   <a id="home-link-small" class="navbar-header" href='{{ "/" | relURL }}' id="home-link-small">~$ <span id='cursor-blinky-sm'>&#9608;</span></a>
   <ul class="ul-navbar" id="ul-navbar">
     <li><a href='{{ "pages/resume" | relURL }}'>[Resume]</a></li>
+    <li><a href='{{ "pages/about" | relURL }}'>[About me]</a></li>
   </ul>
   <a role="button" id="nav-dropdown-icon">[...]</a>
 </nav>
