--- a/themes/mamimikun_theme/layouts/_partials/resume_card_misc.html
+++ b/themes/mamimikun_theme/layouts/_partials/resume_card_misc.html
@@ -1,9 +1,7 @@
-<li>
-<strong>
-{{ .title }}
+<h3>
+[{{ .title }}]
 {{ if .duration }}
   - ({{ .duration }})
 {{ end }}
-</strong>
+</h3>
 <p>{{ .description }}</p>
-</li>
