--- a/themes/mamimikun_theme/layouts/home.html
+++ b/themes/mamimikun_theme/layouts/home.html
@@ -1,6 +1,5 @@
 {{ define "main" }}
-<div class="center-card">
-  <h1>{{ .Title }}</h1>
+<div class="center-card-section">
   {{ .Content }}
 </div>
 {{ end }}
