--- a/themes/mamimikun_theme/layouts/page.html
+++ b/themes/mamimikun_theme/layouts/page.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-<div class="center-card">
-  <h3>{{ .Title }}</h1>
+<div class="center-card-section">
+  <h1>{{ .Title }}</h1>
   {{ .Content }}
 </div>
 {{ end }}
