--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,15 @@
 /* main styles */
 
 body {
-  font-family: 'Perfect DOS VGA 437 Win', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   font-size: 1.5rem;
   color: white;
   background-color: black;
+}
+
+ul {
+    margin: 0;
+    padding: 1.5ch;
 }
 
 .invisible {
@@ -127,8 +132,8 @@ a:hover {
 
 @media only screen and (max-width: 768px) {
     body {
-  font-family: 'Perfect DOS VGA 437 Win', sans-serif;
-  font-size: 20px;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 18px;
   color: white;
   background-color: black;
 }
@@ -201,7 +206,7 @@ a:hover {
 
 @media only screen and (min-width: 768px) {
     body {
-  font-family: 'Perfect DOS VGA 437 Win', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   font-size: 1.5rem;
   color: white;
   background-color: black;
